--- a/Presentation01/package.json
+++ b/Presentation01/package.json
@@ -9,8 +9,12 @@
   },
   "dependencies": {
     "@slidev/cli": "^0.49.2",
+    "@slidev/theme-apple-basic": "^0.25.1",
     "@slidev/theme-default": "latest",
     "@slidev/theme-seriph": "latest",
     "vue": "^3.4.27"
+  },
+  "devDependencies": {
+    "playwright-chromium": "^1.46.0"
   }
 }
